Update: update ui of interfaces + Layout shared

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,12 @@ CodeCoverage/
 
 # Visual Studio
 .vs/
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
+
+appsettings.*.local.json
 
 # NUnit
 *.VisualState.xml
