--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FileSettings": {
+    "DefaultLogFolder": "Logs/",
+    "LogFileName":  "log.txt"
+  }
 }
